--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "multer": "^1.3.0",
     "mysql": "^2.15.0",
     "pasteurize": "^2.0.0",
+    "popper.js": "^1.12.9",
     "randomstring": "^1.1.5",
     "uuid": "^3.2.1"
   },
